<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="product"
            type="com.maxleap.ebusiness.models.Product"/>

    </data>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </android.support.v7.widget.Toolbar>

        <android.support.v4.widget.NestedScrollView
            android:layout_below="@+id/toolbar"
            android:layout_marginBottom="68dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_main"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="294dp">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/view_pager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </android.support.v4.view.ViewPager>

                    <com.maxleap.ebusiness.widget.NumberIndicator
                        android:id="@+id/indicator"
                        android:layout_width="47dp"
                        android:layout_height="32dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="16dp"
                        android:layout_marginRight="16dp"
                        app:bgColor="@color/bg_btn_disable"
                        app:radius="4dp"
                        app:textColor="@color/white"
                        app:textSize="20sp"/>


                </RelativeLayout>

                <include
                    layout="@layout/view_divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:paddingTop="16dp"
                        android:text="@{product.title}"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/intro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:maxLines="2"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="16dp"
                        android:text="领券减100！抢完即至！领券地址:http://www.google.com/vadafa"
                        android:textColor="@color/bg_btn_disable"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:paddingTop="16dp"
                        android:text="￥1589"
                        android:textColor="@color/bg_btn"
                        android:textSize="28sp"/>

                    <TextView
                        android:id="@+id/originPrice"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:text="原价￥1999"
                        android:textColor="@color/bg_btn_disable"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/service"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:text="服务： 价格保护\n        此商品支持七天无理由退货"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/color_layout"
                        android:layout_width="match_parent"
                        android:layout_height="48dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:paddingLeft="16dp"
                            android:text="@string/activity_detail_color"
                            android:textColor="@color/black"
                            android:textSize="15sp"/>

                        <TextView
                            android:id="@+id/product_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:paddingRight="16dp"
                            android:text="黑色"
                            android:textColor="@color/normal_hint_color"
                            android:textSize="15sp"/>

                    </RelativeLayout>

                    <include
                        layout="@layout/view_divider"/>

                    <RelativeLayout
                        android:id="@+id/version_layout"
                        android:layout_width="match_parent"
                        android:layout_height="48dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:paddingLeft="16dp"
                            android:text="@string/activity_detail_version"
                            android:textColor="@color/black"
                            android:textSize="15sp"/>

                        <TextView
                            android:id="@+id/product_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:paddingRight="16dp"
                            android:text="高配版本"
                            android:textColor="@color/normal_hint_color"
                            android:textSize="15sp"/>

                    </RelativeLayout>

                    <include
                        layout="@layout/view_divider"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:paddingLeft="16dp"
                            android:text="@string/activity_detail_quantity"
                            android:textColor="@color/black"
                            android:textSize="15sp"/>

                        <ImageView
                            android:id="@+id/decrease_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="8dp"
                            android:layout_toLeftOf="@+id/quantity"
                            android:background="@mipmap/ic_minus_one"/>

                        <TextView
                            android:id="@+id/quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="8dp"
                            android:layout_toLeftOf="@+id/increase_quantity"
                            android:text="1"
                            android:textColor="@color/black"
                            android:textSize="15sp"/>

                        <ImageView
                            android:id="@+id/increase_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:background="@mipmap/ic_add_one"/>

                    </RelativeLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/review"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:text="@string/activity_detail_review"
                        android:textColor="@color/black"/>

                    <include
                        layout="@layout/view_divider"/>

                    <TextView
                        android:id="@+id/spec"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:text="@string/activity_detail_spec"
                        android:textColor="@color/black"/>

                    <include
                        layout="@layout/view_divider"/>

                    <TextView
                        android:id="@+id/detail"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:text="@string/activity_detail_info"
                        android:textColor="@color/black"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/fav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/btn_fav"
                android:gravity="center"
                android:paddingTop="4dp"
                android:text="@string/activity_detail_fav"
                android:textColor="@color/black"
                android:textSize="15sp"/>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:drawablePadding="4dp"
                    android:drawableTop="@drawable/btn_shopping_cart"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:text="@string/activity_detail_cart"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/cart_num"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/ic_shop_cart"/>


            </RelativeLayout>

            <TextView
                android:id="@+id/add_to_cart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/activity_detail_add_to_cart"
                android:textColor="@color/white"
                android:textSize="18sp"/>


        </LinearLayout>

    </RelativeLayout>
</layout>